<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_map" translatable="false">Map</string>
    <string name="action_share" translatable="false">Share</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">Settings</string>


    <!--Label for the location preference -->
    <string name="pref_location_label">Location</string>

    <!--Key name fore storing location in SharedPreferences-->
    <string name="pref_location_key">location</string>

    <!--Default postal code for location preference-->
    <string name="pref_location_default" >60613</string>

    <!--Label for the Temperature Unit preference -->
    <string name="pref_temperature_unit_label">Temperature Unit</string>

    <!--Key name fore Temperature Unit in SharedPreferences-->
    <string name="pref_temperature_unit_key">units</string>

    <!--Default Temperature Unit for Temperature Unit preference-->
    <string name="pref_temperature_unit_default">Metric</string>

    <string name="pref_units_metric">Metric</string>
    <string name="pref_units_imperial">Imperial</string>



</resources>
