<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default"
        android:inputType="textCapWords"
        android:singleLine="true"/>

    <ListPreference
        android:key="@string/pref_temperature_unit_key"
        android:title="@string/pref_temperature_unit_label"
        android:defaultValue="@string/pref_temperature_unit_default"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"/>

</PreferenceScreen>
